Create deno task to run frontend and backend in parallel

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="https://em-content.zobj.net/source/apple/419/beer-mug_1f37a.png" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Create TanStack App - frontend</title>
+    <title>Wold Beer Cup improved</title>
   </head>
   <body>
     <div id="app"></div>
